[package]
name = "embassy-rp-skeleton"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embassy-executor = { version = "0.5.0", features = [
    "defmt",
    "integrated-timers",
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
static_cell = "2.0.0"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }


# fixed = "1.23.1"
# fixed-macro = "1.2"

# futures = { version = "0.3.17", default-features = false, features = [
#     "async-await",
#     "cfg-target-has-atomic",
#     "unstable",
# ] }
# display-interface-spi = "0.4.1"
# embedded-graphics = "0.7.1"
# st7789 = "0.6.1"
# display-interface = "0.4.1"
# byte-slice-cast = { version = "1.2.0", default-features = false }
# smart-leds = "0.3.0"
# heapless = "0.8"
# usbd-hid = "0.7.0"

# embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
# embedded-hal-async = "1.0"
# embedded-hal-bus = { version = "0.1", features = ["async"] }
# embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
# embedded-storage = { version = "0.3" }
# log = "0.4"
# pio-proc = "0.2"
# pio = "0.2.1"
# rand = { version = "0.8.5", default-features = false }
